[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-reverse-proxy = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
dirs = "5.0"
dialoguer = "0.11.0"
