[package]
name = "prin"
description = "A simple reverse proxy terminal utility "
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shubhexists/prin"
authors = ["Shubham singh   <github: github.com/shubhexists>"]
license-file = "LICENSE"
categories = ["asynchronous", "command-line-utilities"]
keywords = ["Proxy", "cli"]
readme = "README.md"

[dependencies]
hyper-reverse-proxy = "0.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
dirs = "5.0"
dialoguer = "0.11.0"
colored = "3.0.0"
